--- a/package.json
+++ b/package.json
@@ -17,10 +17,9 @@
     "prepare": "if [ -d .git ]; then npm-merge-driver install; fi",
     "prettify": "prettier --write \"**/*.{js,jsx,json,css,scss,md}\"",
     "postinstall": "touch secrets.js",
-    "start": "npm run build-client && npm run open",
+    "start": "npm run build-client",
     "open": "concurrently \"http-server -a localhost -p 1234\" \"open http://localhost:1234\"",
-    "start-dev": "NODE_ENV='development' npm run build-client-watch & NODE_ENV='development'",
-    "test": "NODE_ENV='test' mocha \"./server/**/*.spec.js\" \"./client/**/*.spec.js\" \"./script/**/*.spec.js\" --require @babel/polyfill --require @babel/register"
+    "start-dev": "NODE_ENV='development' npm run build-client-watch & NODE_ENV='development' && npm run open"
   },
   "lint-staged": {
     "*.{js,jsx}": [
