--- a/package.json
+++ b/package.json
@@ -17,9 +17,8 @@
     "prepare": "if [ -d .git ]; then npm-merge-driver install; fi",
     "prettify": "prettier --write \"**/*.{js,jsx,json,css,scss,md}\"",
     "postinstall": "touch secrets.js",
-    "start": "npm run build-client",
-    "open": "concurrently \"http-server -a localhost -p 1234\" \"open http://localhost:1234\"",
-    "start-dev": "NODE_ENV='development' npm run build-client-watch & NODE_ENV='development' && npm run open"
+    "start": "node server",
+    "start-dev": "NODE_ENV='development' npm run build-client-watch & NODE_ENV='development' && npm run start-server"
   },
   "lint-staged": {
     "*.{js,jsx}": [
